Fixed security issues, optimized trends logic

--- a/network-backend/src/main/resources/application.properties
+++ b/network-backend/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=never
+
+2fa.email=diplomski012@gmail.com
+email.password=bgbo\ bqal\ bpzh\ gexs
